Layout improvement: color dots menu moved to the left, round profile picture...

--- a/css/me.css
+++ b/css/me.css
@@ -137,15 +137,14 @@ img.pixShadow,
   font-family: 'Raleway-Regular', "Century Gothic", arial;
   width: 310px;
   padding: 5px;
-  margin: 0 10px 10px 20px;
-  background-color: white;
+  margin: auto;
 }
 .avatar > div > img{
   height: 300px;
   width: 300px;
   cursor: pointer;
   border: solid 3px white;
-  border-radius: 10px;
+  border-radius: 50%;
   margin-bottom: 10px;
 }
 .avatar > div > img:hover{
@@ -192,7 +191,6 @@ img.pixShadow,
   width: 230px;
   top: 107px;
   left: -90px;
-  font-size: 1.5em;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
@@ -201,7 +199,8 @@ img.pixShadow,
 .sTitle{
   position: -webkit-sticky;
   position: sticky;
-  top: 5px;
+  top: 20px;
+  padding-left: 30px;
   font-size: 2em;
   writing-mode: vertical-rl;
   text-orientation: mixed;
@@ -275,7 +274,7 @@ img.pixShadow,
 td:first-child,
 section{
   position: relative;
-  border-left: solid 20px transparent;
+  border-left: solid 14px transparent;
   padding-left: 10px;
   line-height: 30px;
 }
@@ -284,10 +283,10 @@ section{
   margin: 20px 45px 45px 5px;
 }
 div.pad{
-  padding: 10px 20px 10px 80px;
+  padding: 10px 20px 30px 80px;
 }
 td.pad{
-  padding: 10px 20px 10px 40px;
+  padding: 10px 20px 30px 40px;
 }
 section.c0{
     z-index: 50;
@@ -304,8 +303,8 @@ section.c0{
   z-index: 1500;
   padding: 5px 0;
   position: fixed;
-  top:35px;
-  right:-10px;
+  top: 5px;
+  left: 10px;
   width:47px;
 }
 .c7-dots > a{
@@ -325,7 +324,7 @@ section.c0{
   display: block;
   position: absolute;
   font-size: 1.2em;
-  left: -50px;
+  left: -150px;
   top: 65px;
   border: none;
 }
@@ -333,7 +332,7 @@ section.c0{
   z-index: 10;
   opacity: 1;
   top: 90px;
-  left: -136px;
+  left: -75px;
   transition: left .3s;
 }
 .c7-dots > a > div{
@@ -342,6 +341,7 @@ section.c0{
   border-radius: 50%;
   height: 18px;
   width: 18px;
+  border: solid 2px white;
 }
 .c7-dots > a:hover > div{
   top: -6px;
@@ -431,7 +431,7 @@ section.c0{
 }
 #egg {
   width: 800px;
-  padding: 0 10px 0 0;
+  padding: 0 20px 0 20px;
   margin: 50px auto;
 }
 #you{
@@ -490,7 +490,9 @@ section.c0{
   max-width: 500px;
   margin: 20px auto 0;
 }
-
+#me{
+  border-left: none;
+}
 .hello,
 .dear,
 .me,
@@ -500,7 +502,38 @@ section.c0{
   border-radius: 50%;
   padding: 40px;
 }
+.hello-dear{
+  display: inline-block;
+  max-height: 200px;
+}
+#hello > .pad{
+  max-height: 390px;
+}
+.japancircle { 
+  float: left;
+
+  position: absolute;
+  top: 80px;
+  left: 460px;
+
+  height: 240px;
+  width: 240px;
+  background-image: url("../pix/bg2.gif");
+}
+.jcircle{
+  float: right;
+
+  position: relative;
+  top: 20px;
+  right: 40px;
+  border-radius: 50%;
+  height: 180px;
+  width: 180px;
+  background-color: cornflowerblue;
+  background-image: url("../pix/bg2.gif");
+}
 .me{
+  float: left;
   background-color: #9c27b0;
 	width : 520px;
 	height : 520px;
@@ -516,37 +549,29 @@ section.c0{
 .me a:hover {
   background-color: #4A148C;
 }
+
 .hello { 
   background-color:  #03A9F4;
-  width: 90px;
-  height: 90px;
+  width: 12vw;
+  height: 12vw;
+  margin-left: 10px;
 }
-.helloworld{
-  position: relative;
-  top: -17px;
-  padding: 20px 0;
-  min-width: 600px;
+.helloworld{ 
+  padding: 2vw;
+  font-size: 3vw;
 }
 .dear {
   color: white;
   text-align: center;
-  position: absolute; 
   top: 40px;
   left: 370px;
   height: 120px;
   width: 120px;
   background-color: #ffb74d;
   line-height: 40px;
-  font-size: 22px;
-}
-.japancircle { 
-  position: absolute;
-  height: 240px;
-  width: 240px; 
-  top: 570px;
-  left: 600px; 
-  background-image: url("../pix/bg2.gif");
-}
+  font-size: 24px;
+  margin-left: 5vw;
+} 
 .cards > div {
   float: left;
   margin: 10px 20px 0 0;
@@ -572,16 +597,31 @@ section.c0{
     margin: 4px;
   }
 }
+@media only screen and (max-width: 600px){ 
+  .japancircle {
+    display: none;
+  }
+  .jcircle {
+    display: none;
+  }
+}
 @media only screen and (max-width: 750px){ 
-  .hello {
+  table{
+    margin: 10px 2px 10px 2px;
+  }
+  .hello,
+  .dear {
     display: none !important;
   }
   .avatar-holder{
     float: none;
   }
   .helloworld{
-    padding: 0;
+    padding: 2vw 0 2vw 12px;
     margin: 0;
+  }
+  table {
+    margin-left: 5px;
   }
   td:first-child,
   section {
@@ -589,14 +629,16 @@ section.c0{
     padding-left: 0;
   }
   .pad {
+    position: relative;
     padding: 0 10px 10px !important;
     border-left-width: 6px;
   }
   .me{
-    border-radius: 0;
+    float: left;
+    border-radius: 20px;
     width: auto;
     height: auto;
-    padding: 0 5px;
+    padding: 20px;
     margin: 0 0 0 30px;
   }
   .me > div {
@@ -605,27 +647,55 @@ section.c0{
   .sTitle{
     font-size: 1.2em;
     left: -140px;
+    padding-left : 20px;
   }
 }
-@media only screen and (max-width: 800px){ 
+@media only screen and (max-width: 850px){ 
   .japancircle {
-    display: none !important;
+    top: 170px;
+    width: 60px;
+    height: 60px;
   }
-}
-@media only screen and (max-width: 900px){ 
-  .japancircle {
-    width: 160px;
-    height: 160px;
+  #you{
+    border-radius: 20px;
+    padding: 20px;
   }
-  #egg {
-    display: none;
+  #egg { 
+    margin: 20px 0 10px 50px;
+    width: auto;
+    padding: 0 30px;
+  }
+  #you{
+    width: cacl(100% - 100px);
+    border-radius: 20px;
+    width: auto;
+    height: auto;
+  }
+  #you > div {
+    margin-left: 0 !important;
   }
 }
 @media only screen and (max-width: 1000px){ 
-  .dear {
+  body{
+    overflow-x: hidden;
+  }
+  .japancircle {
+    top: 140px;
+    width: 100px;
+    height: 100px;
+  }
+  .dear{
     display: none;
   }
 }
+@media only screen and (max-width: 1100px){ 
+  .japancircle {
+    top: 120px;
+    width: 160px;
+    height: 160px;
+  }
+}
+
 @media print {
   .c7-dots,
   .japancircle,
@@ -636,8 +706,6 @@ section.c0{
   .me{
     color: #1a1a1a;
     background-color: white;
-  }
-  .me{
     height: auto;
     width: 100%;
   }
